--- a/slcore/database/bricktemplate/qemu.timer.yaml
+++ b/slcore/database/bricktemplate/qemu.timer.yaml
@@ -75,11 +75,12 @@ marvell,orion-timer,autoboard:
     'object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id }}), TYPE_AUTOBOARD_TIMER);',
     'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
     'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);',
-    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex }});']
-  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), {{ siid }}, {{
-      intcp.get_irqn }});']
+    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex
+      }});']
+  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), {{ siid
+      }}, {{ intcp.get_irqn }});']
   get_field: ['AUTOBOARD_TIMERState {{ name }}{{ id }};']
-  get_header: ['hw/timer/autoboard_timer.h']
+  get_header: [hw/timer/autoboard_timer.h]
   parameters: [name, regs]
 marvell,pxa-timer: {extend: 'timer,generic'}
 mediatek,mt6577-timer: {extend: 'timer,generic'}
@@ -106,28 +107,23 @@ plxtech,nas782x-rps-timer,autoboard:
     'object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id }}), TYPE_AUTOBOARD_TIMER);',
     'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
     'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);',
-    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex }});']
+    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex
+      }});']
   get_connection: []
   get_field: ['AUTOBOARD_TIMERState {{ name }}{{ id }};']
-  get_header: ['hw/timer/autoboard_timer.h']
+  get_header: [hw/timer/autoboard_timer.h]
   parameters: [name, regs]
 qcom,kpss-timer: {extend: 'timer,generic'}
 qcom,scss-timer: {extend: 'timer,generic'}
-ralink,cevt-systick:
-  extend: 'timer,generic'
-  external: true
-  get_connection: []
+ralink,cevt-systick: null
 ralink,rt2880-timer:
+  extend: timer,generic
   external: true
   get_connection: []
-  extend: 'timer,generic'
 ralink,rt2880-timer,autoboard:
+  extend: timer,generic
   external: true
   get_connection: []
-  extend: 'timer,generic'
-qcom,kpss-timer: {extend: 'timer,generic'}
-qcom,scss-timer: {extend: 'timer,generic'}
-ralink,cevt-systick:
 rda,8810pl-timer: {extend: 'timer,generic'}
 renesas,16bit-timer: {extend: 'timer,generic'}
 renesas,8bit-timer: {extend: 'timer,generic'}
@@ -163,13 +159,17 @@ stericsson,u300-apptimer: {extend: 'timer,generic'}
 ti,da830-timer: {extend: 'timer,generic'}
 ti,keystone-timer: {extend: 'timer,generic'}
 ti,omap-counter32k: {extend: 'timer,generic'}
+ti,omap3430-timer:
+  buddy_compatible: []
+  extend: timer,generic
 timer,generic:
-  get_body: ['object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id }}), TYPE_{{
-      name|to_upper }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{ id }}), sysbus_get_default());',
-    'object_property_set_bool(OBJECT(&s->{{ name }}{{ id }}), true, "realized", &err);',
-    'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{ name }}{{ id }}), 0, {{ reg.base|to_hex }});']
-  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), {{ siid }}, {{
-      intcp.get_irqn }});']
+  get_body: ['object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id
+      }}), TYPE_{{ name|to_upper }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{
+      id }}), sysbus_get_default());', 'object_property_set_bool(OBJECT(&s->{{ name
+      }}{{ id }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
+      name }}{{ id }}), 0, {{ reg.base|to_hex }});']
+  get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), {{ siid
+      }}, {{ intcp.get_irqn }});']
   get_field: ['{{ name|to_upper }}State {{ name }}{{ id }};']
   get_header: ['hw/timer/{{ name }}.h']
   parameters: [name, intcp, irqns]
