--- a/slcore/cmdconfigs/plugins/fancy.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/fancy.cmd.yaml
@@ -7,4 +7,8 @@ cmdcoverup:
             short: dtb
             required: False
             help: "Path to device tree."
+        source: &source
+            short: s
+            required: False
+            help: "Path to OS source."
     callback: bootingcmd
