--- a/slcore/cmdconfigs/builtin.cmd.yaml
+++ b/slcore/cmdconfigs/builtin.cmd.yaml
@@ -66,7 +66,7 @@ synthesize:
         autoboard_all: *autoboard_all
     callback: synthesis
 archive:
-    help: "Standalone - QEMU machine archiving."
+    help: "Plugin - QEMU machine archiving."
     optional:
         dtb: *dtb
     callback: archive
