update analysis group and analysis, especailly bfilter to remove dep on support database

--- a/slcore/aconfigs/builtin.a.yaml
+++ b/slcore/aconfigs/builtin.a.yaml
@@ -29,3 +29,5 @@ tracecoverup:
         ShowCallstack, ShowDeadLoop,
         CheckDataAbort, CheckUndefInst, CheckTLBExcep]
     description: 'Coverup QEMU debug trace.'
+traversal:
+    analyses: [CheckBoard, TraverseKernel]
