--- a/slcore/aconfigs/plugins/image.a.yaml
+++ b/slcore/aconfigs/plugins/image.a.yaml
@@ -1,3 +1,3 @@
 bootingcmd:
     analyses: [Unpack, DTPreprocessing, Preparation, PBtngCMD]
-    description: ''
+    description: 'Print booting command line.'
