--- a/slcore/cmdconfigs/plugins/source.cmd.yaml
+++ b/slcore/cmdconfigs/plugins/source.cmd.yaml
@@ -3,7 +3,7 @@ ofinitsrc:
     optional: &optional
         source: &source
             short: s
-            required: False
+            required: True
             help: "Path to OS source."
     callback: updatecompatibledb
 newhwsrc:
@@ -25,14 +25,11 @@ ofinitcbs:
             required: True
             help: "Path to device tree."
     callback: ofinitsrc
-    # analysrc:
-    # help: "Plugin - Find file in OS source."
-    # optional:
-    # << : *optional
-    # entry_point: {short: e, required: False,
-    # help: "Find file contains the entry point of data or function and preprocess the file."}
-    # file: {short: f, required: False, help: "File to be preprocessed."}
-    # callback: quicksrca
-    # bfilter
-    # board: {short: b, required: False, help: "set board manually to replace --url"}
-    # url: {short: l, required: False, help: "will be removed in the future"}
+analysrc:
+    help: "Plugin - Find and preprocess file in OS source."
+    optional:
+        << : *optional
+        entry_point: {short: e, required: False, help: "Function name."}
+        file: {short: f, required: False, help: "Relative path to file to be preprocessed."}
+        cross_compile: {short: cc, required: True, help: "Prefix to cross compiler."}
+    callback: quicksrca
