--- a/slcore/database/bricktemplate/qemu.timer.yaml
+++ b/slcore/database/bricktemplate/qemu.timer.yaml
@@ -9,7 +9,17 @@ alphascale,asm9260-timer: {extend: 'timer,generic'}
 amlogic,meson6-timer: {extend: 'timer,generic'}
 andestech,atcpit100: {extend: 'timer,generic'}
 arm,arm11mp-twd-timer: {extend: 'timer,generic'}
-arm,armv7-timer: {extend: 'timer,generic'}
+arm,armv7-timer: 
+  get_body: []
+  get_connection: [
+    'qdev_connect_gpio_out(DEVICE(&s->cpu), GTIMER_PHYS, {{ intcp.get_irqn }});',
+    'qdev_connect_gpio_out(DEVICE(&s->cpu), GTIMER_VIRT, {{ intcp.get_irqn }});',
+    'qdev_connect_gpio_out(DEVICE(&s->cpu), GTIMER_HYP, {{ intcp.get_irqn }});',
+    'qdev_connect_gpio_out(DEVICE(&s->cpu), GTIMER_SEC, {{ intcp.get_irqn }});',
+  ]
+  get_field: []
+  get_header: []
+  parameters: [intcp, irqns]
 arm,armv7-timer-mem: {extend: 'timer,generic'}
 arm,armv7m-systick: {extend: 'timer,generic'}
 arm,armv8-timer: {extend: 'timer,generic'}
